# iracingOverlay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Installers/: installDependiciesWindows-part1.bat
app/: CMakeLists.txt  IDataReceiver.h  IRData.cpp  IRData.h  irOverlay.cpp
app/throttleBrakeTrace/: CMakeLists.txt  ThrottleBrakeTraceController.cpp  ThrottleBrakeTraceController.h  ThrottleBrakeTraceModel.cpp  ThrottleBrakeTraceModel.h  ThrottleBrakeTraceView.cpp  ThrottleBrakeTraceView.h
src/: CMakeLists.txt  DataParser.cpp  DataParser.h  irOverlay.cpp  irTraceOverlay.cpp
src/common/: CMakeLists.txt  CommonModel.cpp  CommonModel.h
src/irData/: CMakeLists.txt  IDataReceiver.cpp  IDataReceiver.h  IDataStrings.cpp  IDataStrings.h  IRData.cpp  IRData.h
src/throttleBrakeTrace/: ThrottleBrakeTraceController.cpp  ThrottleBrakeTraceController.h  ThrottleBrakeTraceModel.cpp  ThrottleBrakeTraceModel.h  ThrottleBrakeTraceView.cpp  ThrottleBrakeTraceView.h
src/trackMap/: CMakeLists.txt  TrackMapController.cpp  TrackMapController.h  TrackMapModel.cpp  TrackMapModel.h  TrackMapView.cpp  TrackMapView.h
src/variablePlotter/: CMakeLists.txt  VarSetup.h  VariablePlotController.cpp  VariablePlotController.h  VariablePlotModel.cpp  VariablePlotModel.h  VariablePlotView.cpp  VariablePlotView.h
src/wheelInput/: CMakeLists.txt  WheelInput.cpp  WheelInput.h  WheelInputChecker.cpp
